# ml-practice

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: pre-commit.yaml
connect_4_RL/: .pre-commit-config.yaml  README.md  evaluation.py  models.py  pyproject.toml
connect_4_RL/agents/: env.py
connect_4_RL/game/: game.py  play_pygame.py  play_terminal.py
house_pricing/: README.md  draft.ipynb  experiments.csv  main.py
house_pricing/src/data/: load_data.py  preprocess.py
house_pricing/src/experiments/: logger.py
house_pricing/src/models/: evaluate.py  train.py
kaggle_IML/: draft.ipynb  main.py
kaggle_IML/src/data/: load_data.py  preprocess.py
kaggle_IML/src/experiments/: logger.py
kaggle_IML/src/models/: evaluate.py  train.py
