[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pyright>=1.1.408",
  "ruff>=0.15.4"
]

[project]
dependencies = [
  "ipykernel>=7.2.0",
  "ipython>=9.10.0",
  "matplotlib>=3.10.8",
  "numpy>=2.4.2",
  "pygame>=2.6.1"
]
description = "Add your description here"
name = "connect-4-rl"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.pyright]
venv = ".venv"
venvPath = "."
